feat: Remove px suffixes from template names for cleaner semantics
- Updated TimelineZoomLevel enum values:
  • YearQuarterOptimal70px → YearQuarter
  • QuarterMonthOptimal60px → QuarterMonth
  • MonthWeekOptimal50px → MonthWeek
  • WeekDayOptimal50px → WeekDay

- Renamed renderer classes and files:
  • WeekDay50pxRenderer → WeekDayRenderer
  • MonthWeek50pxRenderer → MonthWeekRenderer
  • QuarterMonth60pxRenderer → QuarterMonthRenderer
  • YearQuarter90pxRenderer → YearQuarterRenderer

- Updated all references across 37 files:
  • Component files (.razor, .cs)
  • Configuration services
  • Demo pages and tests
  • I18N mappings

- Fixed all compilation errors (37 → 0)
- Template names now focus on structure rather than implementation details
- Improved codebase maintainability and semantic clarity

Resolves template naming cleanup task from user requirements.

--- a/src/GanttComponents/Resources/GanttResources.resx
+++ b/src/GanttComponents/Resources/GanttResources.resx
@@ -438,6 +438,32 @@
     <value>Daily scheduling with optimal 60px day cells</value>
   </data>
 
+  <!-- Clean Template Names (Clean Architecture) -->
+  <data name="ZoomLevel.YearQuarter" xml:space="preserve">
+    <value>Year-Quarter</value>
+  </data>
+  <data name="ZoomLevel.YearQuarter.Description" xml:space="preserve">
+    <value>Strategic overview with quarterly breakdown</value>
+  </data>
+  <data name="ZoomLevel.QuarterMonth" xml:space="preserve">
+    <value>Quarter-Month</value>
+  </data>
+  <data name="ZoomLevel.QuarterMonth.Description" xml:space="preserve">
+    <value>Quarterly planning with monthly breakdown</value>
+  </data>
+  <data name="ZoomLevel.MonthWeek" xml:space="preserve">
+    <value>Month-Week</value>
+  </data>
+  <data name="ZoomLevel.MonthWeek.Description" xml:space="preserve">
+    <value>Monthly planning with weekly breakdown</value>
+  </data>
+  <data name="ZoomLevel.WeekDay" xml:space="preserve">
+    <value>Week-Day</value>
+  </data>
+  <data name="ZoomLevel.WeekDay.Description" xml:space="preserve">
+    <value>Daily scheduling with weekly overview</value>
+  </data>
+
 
   <!-- Timeline Zoom UI Controls -->
   <data name="zoom.controls.zoom-in" xml:space="preserve">
